--- a/workflows/update-recipe.yml
+++ b/workflows/update-recipe.yml
@@ -35,9 +35,9 @@ jobs:
           GENERATED_JSON: ${{ env.GENERATED_JSON }}
         run: |
           # Replace these variables with your actual values
-          TARGET_REPO_OWNER="target-repo-owner"  # e.g., "Forlgore"
-          TARGET_REPO_NAME="target-repo-name"    # e.g., "recipe-database"
-          TARGET_FILE_PATH="recipe.js"           # Path to the file you want to update
+          TARGET_REPO_OWNER="Forlgore"  # e.g., "Forlgore"
+          TARGET_REPO_NAME="recipe-frontend"    # e.g., "recipe-database"
+          TARGET_FILE_PATH="recipe-frontend/data/recipes.json"           # Path to the file you want to update
 
           # Fetch the current content of the target file
           FILE_URL="https://api.github.com/repos/$TARGET_REPO_OWNER/$TARGET_REPO_NAME/contents/$TARGET_FILE_PATH"
